@@ -1,5 +1,12 @@
 2004-12-19  Bruno Haible  <bruno@clisp.org>
 
+	* places.lisp (simple-assignment-p): Add env argument. Recognize
+	assignments to symbol-macros.
+	(push, pop, pushnew, remf, define-modify-macro, setf): Pass environment
+	to simple-assignment-p.
+
+2004-12-19  Bruno Haible  <bruno@clisp.org>
+
 	Optimize away empty LET* in place macro expansions.
 	* places.lisp (wrap-let*): New function.
 	(push, pop, psetf, pushnew, remf, define-modify-macro, setf,
